--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,448 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color-darkest: #0f172a;
+  --color-dark: #1e293b;
+  --color-medium: #94a3b8;
+  --color-light: #cbd5e1;
+
+  --color-theme: #1098ad;
+  --color-accent: #ffa94d;
+  --color-progress: #22c55e;
+
+  --color-correct: #16a34a
+  --color-incorrect: #ef4444
+
+  --arrow-bg: rgba(255, 255, 255, 0.3);
+  --arrow-icon: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg);
+  --option-bg: white;
+  --select-bg: rgba(255, 255, 255, 0.2);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: 'inter', sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+}
+
+body {
+  min-height: 100vh;
+  color: var(--color-light);
+  background: linear-gradient(35deg, var(--color-darkest), var(--color-dark),  var(--color-darkest));
+  padding: 3.2rem;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0;
+}
+h1 {
+  font-family: 'Rubik Scribble', sans-serif;
+  font-size: 6.2rem;
+}
+h2 {
+  font-size: 3.2rem;
+}
+h3 {
+  font-size: 3.2rem;
+  font-weight: 500;
+  line-height: 1.5;
+}
+label {
+  font-size: 2.2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.logo {
+  width: 10rem;
+  height: 10rem;
+}
+.setup-quiz,
+.section-container {
+  width: 60%;
+  margin: 1rem auto;
+}
+.form-quiz {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  width: 100%;
+}
+.divide-quiz {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+/* !Button */
+
+.btn {
+  width: 100%;
+  height: 50px;
+  font-size: 2.4rem;
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: var(--color-dark);
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  margin-top: 2.8rem;
+  cursor: pointer;
+}
+.glow-on-hover {
+  cursor: pointer;
+}
+
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+.glow-on-hover:active {
+  color: #000;
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: var(--color-dark);
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+/* !Input, Select */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+#num-questions {
+  background: var(--color-darkest);
+  cursor: auto;
+}
+/* <select> styles */
+select,
+input {
+  /* Reset */
+  appearance: none;
+  border: 0;
+  outline: 0;
+  font: inherit;
+  font-size: 2rem;
+  /* Personalize */
+  width: 40%;
+  padding: 1rem 4rem 1rem 1rem;
+  background: var(--arrow-icon) no-repeat right 0.8em center / 1.4em,
+    linear-gradient(to left, var(--arrow-bg) 3em, var(--select-bg) 3em);
+  color: white;
+  border-radius: 0.25em;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  /* Remove IE arrow */
+  input::-ms-expand {
+    display: none;
+  }
+  /* Remove focus outline */
+  input:focus {
+    outline: none;
+  }
+  /* <option> colors */
+  select {
+    color: inherit;
+    background-color: var(--option-bg);
+  }
+}
+
+
+
+/* !Progress */
+
+progress {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 16px;
+  grid-column: 1 / -1;
+}
+
+::-webkit-progress-bar {
+  background-color: var(--color-light);
+  border-radius: 100px;
+}
+::-webkit-progress-value {
+  background-color: var(--color-progress);
+  border-radius: 100px;
+}
+.section-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.question-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 2.4rem;
+}
+/* !Loader */
+.loader {
+  position: absolute;
+  top: calc(50% - 32px);
+  left: calc(50% - 32px);
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  perspective: 800px;
+}
+
+.inner {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;  
+}
+
+.inner.one {
+  left: 0%;
+  top: 0%;
+  animation: rotate-one 1s linear infinite;
+  border-bottom: 3px solid #EFEFFA;
+}
+
+.inner.two {
+  right: 0%;
+  top: 0%;
+  animation: rotate-two 1s linear infinite;
+  border-right: 3px solid #EFEFFA;
+}
+
+.inner.three {
+  right: 0%;
+  bottom: 0%;
+  animation: rotate-three 1s linear infinite;
+  border-top: 3px solid #EFEFFA;
+}
+
+@keyframes rotate-one {
+  0% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate-two {
+  0% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate-three {
+  0% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+  }
+}
+/* !Next Button */
+@import url('https://fonts.googleapis.com/css?family=Poppins:900i');
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.cta {
+  display: flex;
+  align-items: center;
+  padding: 5px 15px;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-size: 3.2rem;
+  color: white;
+  background: #6225e6;
+  transition: 1s;
+  box-shadow: 6px 6px 0 black;
+  transform: skewX(-15deg);
+}
+
+.cta:focus {
+  outline: none;
+}
+
+.cta:hover {
+  transition: 0.5s;
+  box-shadow: 10px 10px 0 #fbc638;
+}
+
+.cta span:nth-child(2) {
+  transition: 0.5s;
+  margin-right: 0px;
+}
+
+.cta:hover span:nth-child(2) {
+  transition: 0.5s;
+  margin-right: 45px;
+}
+
+.cta span {
+  transform: skewX(15deg);
+}
+
+.wrapper span:nth-child(2) {
+  width: 20px;
+  margin-left: 30px;
+  position: relative;
+  top: 12%;
+}
+
+/**************SVG****************/
+
+path.one {
+  transition: 0.4s;
+  transform: translateX(-60%);
+}
+
+path.two {
+  transition: 0.5s;
+  transform: translateX(-30%);
+}
+
+.cta:hover path.three {
+  animation: color_anim 1s infinite 0.2s;
+}
+
+.cta:hover path.one {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.6s;
+}
+
+.cta:hover path.two {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.4s;
+}
+
+/* SVG animations */
+
+@keyframes color_anim {
+  0% {
+    fill: white;
+  }
+  50% {
+    fill: #fbc638;
+  }
+  100% {
+    fill: white;
+  }
+}
+/* !Other CSS */
+.question-info {
+  display: flex;
+  font-size: 1.8rem;
+  justify-content: space-between;
+}
+.detail-info {
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+}
+.question {
+  font-size: 2.4rem;
+}
+.option {
+  display: flex;
+  flex-direction: column;
+  gap: 2.8rem;
+}
+.btn-correct {
+  background-color: #16a34a;
+  cursor: not-allowed;
+}
+.info-category{
+  font-size: 1.6rem;
+  letter-spacing: -0.1rem;
+}
+.info-difficulty{
+  text-transform: capitalize;
+  font-style: normal;
+}
+.btn-incorrect {
+  background-color: #be123c;
+  cursor: not-allowed;
+
+}
+.detail-info svg{
+  color: var(--color-theme);
+  width: 2.4rem;
+  height: 2.4rem;
+  margin: 0;
 }
