--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@
   --color-light: #cbd5e1;
 
   --color-theme: #1098ad;
+  --color-theme-light: #22d3ee;
   --color-accent: #ffa94d;
   --color-progress: #22c55e;
+  --color-school-theme: #6d28d9;
 
   --color-correct: #16a34a
   --color-incorrect: #ef4444
@@ -52,6 +54,10 @@ h3 {
   font-size: 3.2rem;
   font-weight: 500;
   line-height: 1.5;
+}
+h4{
+  font-size: 2.4rem;
+  font-weight: 500;
 }
 label {
   font-size: 2.2rem;
@@ -172,6 +178,69 @@ label {
   }
   100% {
     background-position: 0 0;
+  }
+}
+/* !Progress bar */
+.range {
+  position: relative;
+  background-color: #333;
+  width: 300px;
+  height: 30px;
+  transform: skew(30deg);
+  font-family: 'Orbitron', monospace;
+  
+  &:before {
+    --width: calc(var(--p) * 1%);
+    
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #F3E600;
+    z-index: 0;
+    animation: load .5s forwards linear, glitch 2s infinite linear;
+  }
+  
+  &:after {
+    counter-reset: progress var(--p);
+    content: counter(progress) '%';
+    color: #000;
+    position: absolute;
+    left: 5%;
+    top: 50%;
+    transform: translateY(-50%) skewX(-30deg);
+    z-index: 1;
+  }
+  
+  &__label {
+    transform: skew(-30deg) translateY(-100%);
+    line-height: 1.5;
+  }
+}
+
+@keyframes load {
+  to {
+    width: var(--width);
+  }
+}
+
+@keyframes glitch {
+  0%, 5% {
+    transform: translate(0, 0);
+  }
+  1% {
+    transform: translate(-5%, -10%);
+  }
+  2% {
+    transform: translate(10%, 30%);
+  }
+  3%{
+    transform: translate(-43%, 10%);
+  }
+  4% {
+    transform: translate(2%, -23%);
   }
 }
 
@@ -445,4 +514,34 @@ path.two {
   width: 2.4rem;
   height: 2.4rem;
   margin: 0;
+}
+
+.card{
+  background-color: var(--color-dark);
+  padding: 2.4rem;
+  border-radius: 1.8rem;
+  margin-bottom: 2rem;
+}
+.selected{
+  display: flex;
+  gap: 2.4rem;
+  font-size: 1.8rem;
+  background-color: var(--color-school-theme);
+  padding: 1.8rem;
+  border-radius: 9px;
+}
+
+.card-title{
+  margin-bottom: 1.8rem;
+  font-size: 2.8rem;
+  color: var(--color-theme-light);
+  font-weight: 600;
+  text-align: center;
+}
+.question-card{
+  margin-bottom: 1.8rem;
+  }
+.selected-wrong{
+  color: #fda4af;
+  font-weight: 700;
 }
