implement reset and fix some bugs

--- a/src/index.css
+++ b/src/index.css
@@ -335,6 +335,57 @@ progress {
   align-items: center;
   margin: 0 2.4rem;
 }
+/* !Reset Button */
+@import url('https://fonts.googleapis.com/css?family=Lato:100&display=swap');
+.container-reset {
+  margin: 2.4rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
+  width: 180px;
+  height: 60px;
+  position: absolute;
+}
+
+.btn-reset {
+  width: 100%;
+  height: 60px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #91C9FF;
+  outline: none;
+  transition: 1s ease-in-out;
+}
+
+.btn-reset svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: #fff;
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: 1s ease-in-out;
+}
+
+.btn-reset:hover {
+  transition: 1s ease-in-out;
+  background: #4F95DA;
+}
+
+.btn-reset:hover svg {
+  stroke-dashoffset: -480;
+}
+
+.btn-reset span {
+  color: white;
+  font-size: 18px;
+  font-weight: 100;
+}
+
 /* !Loader */
 .loader {
   position: absolute;
