--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,6 @@ hr{
   justify-content: center;
   align-items: center;
   gap: 3.2rem;
-  margin-bottom: 3.2rem;
 }
 
 .logo {
@@ -83,6 +82,11 @@ hr{
 .section-container {
   width: 60%;
   margin: 1rem auto;
+}
+.main-containerApp{
+  display: flex;
+  flex-direction: column;
+  gap: 5.8rem;
 }
 .form-quiz {
   display: flex;
@@ -728,4 +732,45 @@ blockquote.q-card > .author::before{
 }
 .error-messages h2{
   margin-bottom: 1.8rem;
+}
+.history-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 3.2rem;
+  width: 100%;
+  height: auto;
+  
+}
+
+.quiz-history{
+  background-color: var(--color-dark);
+  padding: 1.8rem;
+  border-radius: 7px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.4rem;
+}
+.review{
+  width: 100%;
+  height: 2.8rem;
+  background-color: var(--color-school-theme);
+  border: none;
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 1.4rem;
+}
+.Success{
+  color: var(--color-progress);
+}
+
+.time{
+  font-size: 1.2rem;
+}
+.history-name{
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: capitalize;
 }
