--- a/src/index.css
+++ b/src/index.css
@@ -71,12 +71,10 @@ hr{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 3.2rem;
 }
 
 .logo {
-  width: 10rem;
-  height: 10rem;
+  height: 7.5rem;
 }
 .setup-quiz,
 .section-container {
@@ -773,4 +771,22 @@ blockquote.q-card > .author::before{
   font-size: 2rem;
   font-weight: 600;
   text-transform: capitalize;
+}
+.btn-review{
+  display: flex;
+  gap: 1.2rem;
+}
+.history-header{
+  display: flex;
+  justify-content: space-between;
+}
+.btn-remove-all{
+  background-color: var(--color-darkest);
+  color: #fff;
+  padding: 0 2rem;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  font-size: 1.6rem;
+  font-weight: 500;
 }
