--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,14 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'inter', sans-serif;
+  overflow-x: hidden;
+
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 
 body {
+  font-family: 'inter', sans-serif;
   min-height: 100vh;
   color: var(--color-light);
   background: linear-gradient(35deg, var(--color-darkest), var(--color-dark),  var(--color-darkest));
