--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  margin: 4.8rem 0;
+  margin-top: 4.8rem;
 }
 h1 {
   font-family: 'Rubik Scribble', sans-serif;
@@ -791,4 +791,17 @@ blockquote.q-card > .author::before{
   cursor: pointer;
   font-size: 1.6rem;
   font-weight: 500;
+}
+.footer{
+  width: 100%;
+  height: 9rem;
+  background-color: var(--color-darkest);
+  margin-top: 2.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-text{
+  text-align: center;
+  font-size: 1.8rem;
 }
